task/Redesign the site

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,67 +1,25 @@
 ---
 layout: default
 ---
-<div id="home" class="grid post">
-<div class="unit whole">
-<article>
-	<header>
-		<h1>{{ page.title }}</h1>
-		<p class="meta">
-			<time class="timeago postlist-meta" datetime="{{ page.date | date: "%Y-%m-%d" }}"><i class="fa fa-calendar"></i>{{ page.date | date: "%B %-d, %Y" }}</time>
-			<a class="sharer facebook" href="#" target="_blank" onclick="window.open('https://www.facebook.com/sharer/sharer.php?u='+window.location.href,'_blank','height=300,width=600');return false;"><i class="fa fa-facebook"></i></a>
-			{% if site.twitter %}
-				<a class="sharer twitter" href="#" target="_blank" onclick="window.open('https://twitter.com/share?url='+window.location.href+'&via={{ site.twitter }}','_blank','height=300,width=600');return false;"><i class="fa fa-twitter"></i></a>
-			{% else %}
-				<a class="sharer twitter" href="#" target="_blank" onclick="window.open('https://twitter.com/share?url='+window.location.href,'_blank','height=300,width=600');return false;"><i class="fa fa-twitter"></i></a>
-			{% endif %}
-		</p>
-	</header>
-	<section>
-		{% if page.tags and page.tags.size > 0 %}
-			<div class="tags">
-				Tagged:
-				{% for tag in page.tags %}
-				<span><i class="fa fa-tag"></i>{{ tag }}</span>
-				{% endfor %}
-			</div>
-		{% endif %}
-		{{ content }}
-	</section>
-	{% if site.disqus %}
-	<footer>
-		<p><a href="#" id="showComments">Comments</a></p>
-		<div id="disqus_thread"></div>
-	</footer>
-	<script>
-		(function(){
-			var hidden = true;
-			var disqus_shortname = '';
-			var cmtBtn = document.getElementById("showComments");
-			var dt = document.getElementById("disqus_thread");
+<article class="post" itemscope itemtype="http://schema.org/BlogPosting">
 
-			cmtBtn.addEventListener("click", function(e){
-				e.preventDefault();
-				if(disqus_shortname === ''){
-					disqus_shortname = '{{ site.disqus }}';
-					dt.innerHTML = 'Loading comments...';
-					(function() {
-			            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-			            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-			            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-			        })();
-				}
-				if(hidden){
-					dt.setAttribute('style','display:block');
-					this.innerHTML = 'Hide Comments';
-				}else{
-					dt.setAttribute('style','display:none');
-					this.innerHTML = 'Comments';
-				}
-				hidden = !hidden;
-			});
-		})();
-	</script>
-	{% endif %}
+  <header class="post-header">
+    <h1 class="post-title" itemprop="name headline">{{ page.title | escape }}</h1>
+    <p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
+  </header>
+
+  <ul class="tags">
+  {% for tag in page.tags %}
+    <li><a href="/tags#{{ tag }}" class="tag">{{ tag }}</a></li>
+  {% endfor %}
+  </ul>
+  <br/>
+
+  <div class="post-content" itemprop="articleBody">
+    {{ content }}
+  </div>
+
+  {% if site.disqus.shortname %}
+    {% include disqus_comments.html %}
+  {% endif %}
 </article>
-</div>
-</div>
