--- a/_sass/_old_tags-custom.scss
+++ b/_sass/_old_tags-custom.scss
@@ -24,7 +24,7 @@
     background: #fff;
     border-radius: 10px;
     box-shadow: inset 0 1px rgba(0, 0, 0, 0.25);
-    content: '';
+    content: "";
     height: 6px;
     left: 10px;
     position: absolute;
@@ -36,7 +36,7 @@
     border-bottom: 13px solid transparent;
     border-left: 10px solid #eee;
     border-top: 13px solid transparent;
-    content: '';
+    content: "";
     position: absolute;
     right: 0;
     top: 0;
